compilador.output
Terminais não utilizados na gramática

   TYPE
   ARRAY
   OF
   ABRE_CHAVES
   FECHA_CHAVES
   ABRE_COLCHETES
   FECHA_COLCHETES
   DIFERENTE
   BAND
   BOR
   OTHER_BOR
   BNOT
   BLSO
   BRSO
   MOD
   XOR


Estado 25 conflitos: 2 de deslocamento/redução, 1 de redução/redução
Estado 32 conflitos: 2 de deslocamento/redução, 1 de redução/redução
Estado 46 conflitos: 1 de redução/redução
Estado 63 conflitos: 3 de redução/redução
Estado 109 conflitos: 18 de redução/redução


Gramática

    0 $accept: programa $end

    1 $@1: %empty

    2 $@2: %empty

    3 programa: $@1 PROGRAM IDENT $@2 ABRE_PARENTESES lista_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO

    4 $@3: %empty

    5 $@4: %empty

    6 bloco: rotulos parte_declara_vars $@3 parte_declara_procedure_function $@4 comando_composto

    7 rotulos: LABEL num_list PONTO_E_VIRGULA
    8        | %empty

    9 num_list: num_list VIRGULA NUMERO
   10         | NUMERO

   11 $@5: %empty

   12 parte_declara_vars: VAR $@5 declara_vars
   13                   | %empty

   14 $@6: %empty

   15 declara_vars: declara_vars $@6 declara_var

   16 $@7: %empty

   17 declara_vars: $@7 declara_var

   18 $@8: %empty

   19 declara_var: lista_id_var DOIS_PONTOS tipo $@8 PONTO_E_VIRGULA

   20 lista_id_var: lista_id_var VIRGULA IDENT
   21             | IDENT

   22 lista_idents: lista_idents VIRGULA IDENT
   23             | IDENT

   24 parte_declara_procedure_function: procedure_function parte_declara_procedure_function
   25                                 | %empty

   26 $@9: %empty

   27 $@10: %empty

   28 procedure_function: PROCEDURE IDENT $@9 param_ProcedureFunction PONTO_E_VIRGULA bloco_PF $@10 PONTO_E_VIRGULA

   29 $@11: %empty

   30 $@12: %empty

   31 $@13: %empty

   32 procedure_function: FUNCTION IDENT $@11 param_ProcedureFunction DOIS_PONTOS tipo $@12 PONTO_E_VIRGULA bloco_PF $@13 PONTO_E_VIRGULA
   33                   | %empty

   34 $@14: %empty

   35 $@15: %empty

   36 $@16: %empty

   37 bloco_PF: $@14 rotulos parte_declara_vars $@15 procedure_function $@16 comando_composto

   38 $@17: %empty

   39 param_ProcedureFunction: ABRE_PARENTESES lista_de_parametrosPF $@17 FECHA_PARENTESES
   40                        | %empty

   41 $@18: %empty

   42 lista_de_parametrosPF: lista_de_parametrosPF PONTO_E_VIRGULA $@18 parametrosPF

   43 $@19: %empty

   44 lista_de_parametrosPF: $@19 parametrosPF
   45                      | %empty

   46 parametrosPF: VAR lista_parametrosPF DOIS_PONTOS tipo
   47             | lista_parametrosPF DOIS_PONTOS tipo

   48 lista_parametrosPF: lista_parametrosPF VIRGULA IDENT
   49                   | IDENT

   50 tipo: INTEGER
   51     | BOOLEAN
   52     | IDENT

   53 comando_composto: T_BEGIN comandos_todos T_END

   54 comandos_todos: comandos
   55               | %empty

   56 comandos: comandos PONTO_E_VIRGULA comando
   57         | comando

   58 $@20: %empty

   59 comando: NUMERO $@20 DOIS_PONTOS com_sem_rotulo
   60        | comando_composto
   61        | com_sem_rotulo

   62 com_sem_rotulo: %empty
   63               | atribui
   64               | repeticao
   65               | condicional
   66               | READ ABRE_PARENTESES lista_leit FECHA_PARENTESES
   67               | WRITE ABRE_PARENTESES lista_impr FECHA_PARENTESES
   68               | desvio
   69               | comando_composto

   70 lista_leit: lista_leit VIRGULA identificador
   71           | identificador

   72 lista_impr: lista_impr VIRGULA identificador
   73           | lista_impr VIRGULA NUMERO
   74           | identificador
   75           | NUMERO

   76 desvio: GOTO NUMERO

   77 $@21: %empty

   78 atribui: identificador $@21 atribui_var

   79 atribui_var: ATRIBUICAO expressao

   80 $@22: %empty

   81 atribui_var: $@22 lista_parametros

   82 $@23: %empty

   83 $@24: %empty

   84 repeticao: WHILE $@23 expressao $@24 DO comando

   85 condicional: if_cond

   86 $@25: %empty

   87 condicional: if_cond ELSE $@25 comando

   88 $@26: %empty

   89 $@27: %empty

   90 if_cond: IF $@26 expressao $@27 THEN comando

   91 $@28: %empty

   92 expressao: expressao $@28 MAIOR expressao_simples

   93 $@29: %empty

   94 expressao: expressao $@29 MAIOR_IGUAL expressao_simples

   95 $@30: %empty

   96 expressao: expressao $@30 MENOR expressao_simples

   97 $@31: %empty

   98 expressao: expressao $@31 MENOR_IGUAL expressao_simples

   99 $@32: %empty

  100 expressao: expressao $@32 IGUAL expressao_simples
  101          | expressao_simples

  102 $@33: %empty

  103 expressao_simples: expressao_simples $@33 SOMA termo

  104 $@34: %empty

  105 expressao_simples: expressao_simples $@34 MENOS termo

  106 $@35: %empty

  107 expressao_simples: expressao_simples $@35 OR termo
  108                  | termo

  109 $@36: %empty

  110 termo: termo $@36 MULTI fator

  111 $@37: %empty

  112 termo: termo $@37 DIV fator

  113 $@38: %empty

  114 termo: termo $@38 AND fator
  115      | fator

  116 fator: ABRE_PARENTESES expressao FECHA_PARENTESES
  117      | NUMERO
  118      | TRUE
  119      | FALSE
  120      | identificador
  121      | chamada_funcao
  122      | NOT fator

  123 $@39: %empty

  124 chamada_funcao: identificador $@39 lista_parametros

  125 $@40: %empty

  126 lista_parametros: ABRE_PARENTESES $@40 lista_expressao FECHA_PARENTESES
  127                 | %empty

  128 $@41: %empty

  129 lista_expressao: lista_expressao VIRGULA $@41 expressao
  130                | expressao

  131 identificador: IDENT


Terminais, com as regras onde eles aparecem

$end (0) 0
error (256)
PROGRAM (258) 3
ABRE_PARENTESES (259) 3 39 66 67 116 126
FECHA_PARENTESES (260) 3 39 66 67 116 126
VIRGULA (261) 9 20 22 48 70 72 73 129
PONTO_E_VIRGULA (262) 3 7 19 28 32 42 56
DOIS_PONTOS (263) 19 32 46 47 59
PONTO (264) 3
T_BEGIN (265) 53
T_END (266) 53
VAR (267) 12 46
IDENT (268) 3 20 21 22 23 28 32 48 49 52 131
ATRIBUICAO (269) 79
LABEL (270) 7
TYPE (271)
ARRAY (272)
OF (273)
PROCEDURE (274) 28
FUNCTION (275) 32
GOTO (276) 76
IF (277) 90
THEN (278) 90
ELSE (279) 87
WHILE (280) 84
DO (281) 84
ABRE_CHAVES (282)
FECHA_CHAVES (283)
ABRE_COLCHETES (284)
FECHA_COLCHETES (285)
IGUAL (286) 100
DIFERENTE (287)
MAIOR (288) 92
MENOR (289) 96
MAIOR_IGUAL (290) 94
MENOR_IGUAL (291) 98
BAND (292)
BOR (293)
OTHER_BOR (294)
BNOT (295)
BLSO (296)
BRSO (297)
SOMA (298) 103
MENOS (299) 105
MULTI (300) 110
MOD (301)
DIV (302) 112
OR (303) 107
AND (304) 114
NOT (305) 122
XOR (306)
TRUE (307) 118
FALSE (308) 119
WRITE (309) 67
READ (310) 66
NUMERO (311) 9 10 59 73 75 76 117
INTEGER (312) 50
BOOLEAN (313) 51
LOWER_THAN_ELSE (314)


Não-terminais com as regras onde eles aparecem

$accept (60)
    à esquerda: 0
programa (61)
    à esquerda: 3, à direita: 0
$@1 (62)
    à esquerda: 1, à direita: 3
$@2 (63)
    à esquerda: 2, à direita: 3
bloco (64)
    à esquerda: 6, à direita: 3
$@3 (65)
    à esquerda: 4, à direita: 6
$@4 (66)
    à esquerda: 5, à direita: 6
rotulos (67)
    à esquerda: 7 8, à direita: 6 37
num_list (68)
    à esquerda: 9 10, à direita: 7 9
parte_declara_vars (69)
    à esquerda: 12 13, à direita: 6 37
$@5 (70)
    à esquerda: 11, à direita: 12
declara_vars (71)
    à esquerda: 15 17, à direita: 12 15
$@6 (72)
    à esquerda: 14, à direita: 15
$@7 (73)
    à esquerda: 16, à direita: 17
declara_var (74)
    à esquerda: 19, à direita: 15 17
$@8 (75)
    à esquerda: 18, à direita: 19
lista_id_var (76)
    à esquerda: 20 21, à direita: 19 20
lista_idents (77)
    à esquerda: 22 23, à direita: 3 22
parte_declara_procedure_function (78)
    à esquerda: 24 25, à direita: 6 24
procedure_function (79)
    à esquerda: 28 32 33, à direita: 24 37
$@9 (80)
    à esquerda: 26, à direita: 28
$@10 (81)
    à esquerda: 27, à direita: 28
$@11 (82)
    à esquerda: 29, à direita: 32
$@12 (83)
    à esquerda: 30, à direita: 32
$@13 (84)
    à esquerda: 31, à direita: 32
bloco_PF (85)
    à esquerda: 37, à direita: 28 32
$@14 (86)
    à esquerda: 34, à direita: 37
$@15 (87)
    à esquerda: 35, à direita: 37
$@16 (88)
    à esquerda: 36, à direita: 37
param_ProcedureFunction (89)
    à esquerda: 39 40, à direita: 28 32
$@17 (90)
    à esquerda: 38, à direita: 39
lista_de_parametrosPF (91)
    à esquerda: 42 44 45, à direita: 39 42
$@18 (92)
    à esquerda: 41, à direita: 42
$@19 (93)
    à esquerda: 43, à direita: 44
parametrosPF (94)
    à esquerda: 46 47, à direita: 42 44
lista_parametrosPF (95)
    à esquerda: 48 49, à direita: 46 47 48
tipo (96)
    à esquerda: 50 51 52, à direita: 19 32 46 47
comando_composto (97)
    à esquerda: 53, à direita: 6 37 60 69
comandos_todos (98)
    à esquerda: 54 55, à direita: 53
comandos (99)
    à esquerda: 56 57, à direita: 54 56
comando (100)
    à esquerda: 59 60 61, à direita: 56 57 84 87 90
$@20 (101)
    à esquerda: 58, à direita: 59
com_sem_rotulo (102)
    à esquerda: 62 63 64 65 66 67 68 69, à direita: 59 61
lista_leit (103)
    à esquerda: 70 71, à direita: 66 70
lista_impr (104)
    à esquerda: 72 73 74 75, à direita: 67 72 73
desvio (105)
    à esquerda: 76, à direita: 68
atribui (106)
    à esquerda: 78, à direita: 63
$@21 (107)
    à esquerda: 77, à direita: 78
atribui_var (108)
    à esquerda: 79 81, à direita: 78
$@22 (109)
    à esquerda: 80, à direita: 81
repeticao (110)
    à esquerda: 84, à direita: 64
$@23 (111)
    à esquerda: 82, à direita: 84
$@24 (112)
    à esquerda: 83, à direita: 84
condicional (113)
    à esquerda: 85 87, à direita: 65
$@25 (114)
    à esquerda: 86, à direita: 87
if_cond (115)
    à esquerda: 90, à direita: 85 87
$@26 (116)
    à esquerda: 88, à direita: 90
$@27 (117)
    à esquerda: 89, à direita: 90
expressao (118)
    à esquerda: 92 94 96 98 100 101, à direita: 79 84 90 92 94 96
    98 100 116 129 130
$@28 (119)
    à esquerda: 91, à direita: 92
$@29 (120)
    à esquerda: 93, à direita: 94
$@30 (121)
    à esquerda: 95, à direita: 96
$@31 (122)
    à esquerda: 97, à direita: 98
$@32 (123)
    à esquerda: 99, à direita: 100
expressao_simples (124)
    à esquerda: 103 105 107 108, à direita: 92 94 96 98 100 101 103
    105 107
$@33 (125)
    à esquerda: 102, à direita: 103
$@34 (126)
    à esquerda: 104, à direita: 105
$@35 (127)
    à esquerda: 106, à direita: 107
termo (128)
    à esquerda: 110 112 114 115, à direita: 103 105 107 108 110 112
    114
$@36 (129)
    à esquerda: 109, à direita: 110
$@37 (130)
    à esquerda: 111, à direita: 112
$@38 (131)
    à esquerda: 113, à direita: 114
fator (132)
    à esquerda: 116 117 118 119 120 121 122, à direita: 110 112 114
    115 122
chamada_funcao (133)
    à esquerda: 124, à direita: 121
$@39 (134)
    à esquerda: 123, à direita: 124
lista_parametros (135)
    à esquerda: 126 127, à direita: 81 124
$@40 (136)
    à esquerda: 125, à direita: 126
lista_expressao (137)
    à esquerda: 129 130, à direita: 126 129
$@41 (138)
    à esquerda: 128, à direita: 129
identificador (139)
    à esquerda: 131, à direita: 70 71 72 74 78 120 124


State 0

    0 $accept: . programa $end

    $padrão  reduzir usando a regra 1 ($@1)

    programa  ir ao estado 1
    $@1       ir ao estado 2


State 1

    0 $accept: programa . $end

    $end  deslocar, e ir ao estado 3


State 2

    3 programa: $@1 . PROGRAM IDENT $@2 ABRE_PARENTESES lista_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO

    PROGRAM  deslocar, e ir ao estado 4


State 3

    0 $accept: programa $end .

    $padrão  aceitar


State 4

    3 programa: $@1 PROGRAM . IDENT $@2 ABRE_PARENTESES lista_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO

    IDENT  deslocar, e ir ao estado 5


State 5

    3 programa: $@1 PROGRAM IDENT . $@2 ABRE_PARENTESES lista_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO

    $padrão  reduzir usando a regra 2 ($@2)

    $@2  ir ao estado 6


State 6

    3 programa: $@1 PROGRAM IDENT $@2 . ABRE_PARENTESES lista_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO

    ABRE_PARENTESES  deslocar, e ir ao estado 7


State 7

    3 programa: $@1 PROGRAM IDENT $@2 ABRE_PARENTESES . lista_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO

    IDENT  deslocar, e ir ao estado 8

    lista_idents  ir ao estado 9


State 8

   23 lista_idents: IDENT .

    $padrão  reduzir usando a regra 23 (lista_idents)


State 9

    3 programa: $@1 PROGRAM IDENT $@2 ABRE_PARENTESES lista_idents . FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO
   22 lista_idents: lista_idents . VIRGULA IDENT

    FECHA_PARENTESES  deslocar, e ir ao estado 10
    VIRGULA           deslocar, e ir ao estado 11


State 10

    3 programa: $@1 PROGRAM IDENT $@2 ABRE_PARENTESES lista_idents FECHA_PARENTESES . PONTO_E_VIRGULA bloco PONTO

    PONTO_E_VIRGULA  deslocar, e ir ao estado 12


State 11

   22 lista_idents: lista_idents VIRGULA . IDENT

    IDENT  deslocar, e ir ao estado 13


State 12

    3 programa: $@1 PROGRAM IDENT $@2 ABRE_PARENTESES lista_idents FECHA_PARENTESES PONTO_E_VIRGULA . bloco PONTO

    LABEL  deslocar, e ir ao estado 14

    $padrão  reduzir usando a regra 8 (rotulos)

    bloco    ir ao estado 15
    rotulos  ir ao estado 16


State 13

   22 lista_idents: lista_idents VIRGULA IDENT .

    $padrão  reduzir usando a regra 22 (lista_idents)


State 14

    7 rotulos: LABEL . num_list PONTO_E_VIRGULA

    NUMERO  deslocar, e ir ao estado 17

    num_list  ir ao estado 18


State 15

    3 programa: $@1 PROGRAM IDENT $@2 ABRE_PARENTESES lista_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco . PONTO

    PONTO  deslocar, e ir ao estado 19


State 16

    6 bloco: rotulos . parte_declara_vars $@3 parte_declara_procedure_function $@4 comando_composto

    VAR  deslocar, e ir ao estado 20

    $padrão  reduzir usando a regra 13 (parte_declara_vars)

    parte_declara_vars  ir ao estado 21


State 17

   10 num_list: NUMERO .

    $padrão  reduzir usando a regra 10 (num_list)


State 18

    7 rotulos: LABEL num_list . PONTO_E_VIRGULA
    9 num_list: num_list . VIRGULA NUMERO

    VIRGULA          deslocar, e ir ao estado 22
    PONTO_E_VIRGULA  deslocar, e ir ao estado 23


State 19

    3 programa: $@1 PROGRAM IDENT $@2 ABRE_PARENTESES lista_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO .

    $padrão  reduzir usando a regra 3 (programa)


State 20

   12 parte_declara_vars: VAR . $@5 declara_vars

    $padrão  reduzir usando a regra 11 ($@5)

    $@5  ir ao estado 24


State 21

    6 bloco: rotulos parte_declara_vars . $@3 parte_declara_procedure_function $@4 comando_composto

    $padrão  reduzir usando a regra 4 ($@3)

    $@3  ir ao estado 25


State 22

    9 num_list: num_list VIRGULA . NUMERO

    NUMERO  deslocar, e ir ao estado 26


State 23

    7 rotulos: LABEL num_list PONTO_E_VIRGULA .

    $padrão  reduzir usando a regra 7 (rotulos)


State 24

   12 parte_declara_vars: VAR $@5 . declara_vars

    $padrão  reduzir usando a regra 16 ($@7)

    declara_vars  ir ao estado 27
    $@7           ir ao estado 28


State 25

    6 bloco: rotulos parte_declara_vars $@3 . parte_declara_procedure_function $@4 comando_composto

    PROCEDURE  deslocar, e ir ao estado 29
    FUNCTION   deslocar, e ir ao estado 30

    T_BEGIN    reduzir usando a regra 25 (parte_declara_procedure_function)
    T_BEGIN    [reduzir usando a regra 33 (procedure_function)]
    PROCEDURE  [reduzir usando a regra 33 (procedure_function)]
    FUNCTION   [reduzir usando a regra 33 (procedure_function)]
    $padrão   reduzir usando a regra 25 (parte_declara_procedure_function)

    parte_declara_procedure_function  ir ao estado 31
    procedure_function                ir ao estado 32


State 26

    9 num_list: num_list VIRGULA NUMERO .

    $padrão  reduzir usando a regra 9 (num_list)


State 27

   12 parte_declara_vars: VAR $@5 declara_vars .
   15 declara_vars: declara_vars . $@6 declara_var

    IDENT     reduzir usando a regra 14 ($@6)
    $padrão  reduzir usando a regra 12 (parte_declara_vars)

    $@6  ir ao estado 33


State 28

   17 declara_vars: $@7 . declara_var

    IDENT  deslocar, e ir ao estado 34

    declara_var   ir ao estado 35
    lista_id_var  ir ao estado 36


State 29

   28 procedure_function: PROCEDURE . IDENT $@9 param_ProcedureFunction PONTO_E_VIRGULA bloco_PF $@10 PONTO_E_VIRGULA

    IDENT  deslocar, e ir ao estado 37


State 30

   32 procedure_function: FUNCTION . IDENT $@11 param_ProcedureFunction DOIS_PONTOS tipo $@12 PONTO_E_VIRGULA bloco_PF $@13 PONTO_E_VIRGULA

    IDENT  deslocar, e ir ao estado 38


State 31

    6 bloco: rotulos parte_declara_vars $@3 parte_declara_procedure_function . $@4 comando_composto

    $padrão  reduzir usando a regra 5 ($@4)

    $@4  ir ao estado 39


State 32

   24 parte_declara_procedure_function: procedure_function . parte_declara_procedure_function

    PROCEDURE  deslocar, e ir ao estado 29
    FUNCTION   deslocar, e ir ao estado 30

    T_BEGIN    reduzir usando a regra 25 (parte_declara_procedure_function)
    T_BEGIN    [reduzir usando a regra 33 (procedure_function)]
    PROCEDURE  [reduzir usando a regra 33 (procedure_function)]
    FUNCTION   [reduzir usando a regra 33 (procedure_function)]
    $padrão   reduzir usando a regra 25 (parte_declara_procedure_function)

    parte_declara_procedure_function  ir ao estado 40
    procedure_function                ir ao estado 32


State 33

   15 declara_vars: declara_vars $@6 . declara_var

    IDENT  deslocar, e ir ao estado 34

    declara_var   ir ao estado 41
    lista_id_var  ir ao estado 36


State 34

   21 lista_id_var: IDENT .

    $padrão  reduzir usando a regra 21 (lista_id_var)


State 35

   17 declara_vars: $@7 declara_var .

    $padrão  reduzir usando a regra 17 (declara_vars)


State 36

   19 declara_var: lista_id_var . DOIS_PONTOS tipo $@8 PONTO_E_VIRGULA
   20 lista_id_var: lista_id_var . VIRGULA IDENT

    VIRGULA      deslocar, e ir ao estado 42
    DOIS_PONTOS  deslocar, e ir ao estado 43


State 37

   28 procedure_function: PROCEDURE IDENT . $@9 param_ProcedureFunction PONTO_E_VIRGULA bloco_PF $@10 PONTO_E_VIRGULA

    $padrão  reduzir usando a regra 26 ($@9)

    $@9  ir ao estado 44


State 38

   32 procedure_function: FUNCTION IDENT . $@11 param_ProcedureFunction DOIS_PONTOS tipo $@12 PONTO_E_VIRGULA bloco_PF $@13 PONTO_E_VIRGULA

    $padrão  reduzir usando a regra 29 ($@11)

    $@11  ir ao estado 45


State 39

    6 bloco: rotulos parte_declara_vars $@3 parte_declara_procedure_function $@4 . comando_composto

    T_BEGIN  deslocar, e ir ao estado 46

    comando_composto  ir ao estado 47


State 40

   24 parte_declara_procedure_function: procedure_function parte_declara_procedure_function .

    $padrão  reduzir usando a regra 24 (parte_declara_procedure_function)


State 41

   15 declara_vars: declara_vars $@6 declara_var .

    $padrão  reduzir usando a regra 15 (declara_vars)


State 42

   20 lista_id_var: lista_id_var VIRGULA . IDENT

    IDENT  deslocar, e ir ao estado 48


State 43

   19 declara_var: lista_id_var DOIS_PONTOS . tipo $@8 PONTO_E_VIRGULA

    IDENT    deslocar, e ir ao estado 49
    INTEGER  deslocar, e ir ao estado 50
    BOOLEAN  deslocar, e ir ao estado 51

    tipo  ir ao estado 52


State 44

   28 procedure_function: PROCEDURE IDENT $@9 . param_ProcedureFunction PONTO_E_VIRGULA bloco_PF $@10 PONTO_E_VIRGULA

    ABRE_PARENTESES  deslocar, e ir ao estado 53

    $padrão  reduzir usando a regra 40 (param_ProcedureFunction)

    param_ProcedureFunction  ir ao estado 54


State 45

   32 procedure_function: FUNCTION IDENT $@11 . param_ProcedureFunction DOIS_PONTOS tipo $@12 PONTO_E_VIRGULA bloco_PF $@13 PONTO_E_VIRGULA

    ABRE_PARENTESES  deslocar, e ir ao estado 53

    $padrão  reduzir usando a regra 40 (param_ProcedureFunction)

    param_ProcedureFunction  ir ao estado 55


State 46

   53 comando_composto: T_BEGIN . comandos_todos T_END

    T_BEGIN  deslocar, e ir ao estado 46
    IDENT    deslocar, e ir ao estado 56
    GOTO     deslocar, e ir ao estado 57
    IF       deslocar, e ir ao estado 58
    WHILE    deslocar, e ir ao estado 59
    WRITE    deslocar, e ir ao estado 60
    READ     deslocar, e ir ao estado 61
    NUMERO   deslocar, e ir ao estado 62

    PONTO_E_VIRGULA  reduzir usando a regra 62 (com_sem_rotulo)
    T_END            reduzir usando a regra 55 (comandos_todos)
    T_END            [reduzir usando a regra 62 (com_sem_rotulo)]
    $padrão         reduzir usando a regra 55 (comandos_todos)

    comando_composto  ir ao estado 63
    comandos_todos    ir ao estado 64
    comandos          ir ao estado 65
    comando           ir ao estado 66
    com_sem_rotulo    ir ao estado 67
    desvio            ir ao estado 68
    atribui           ir ao estado 69
    repeticao         ir ao estado 70
    condicional       ir ao estado 71
    if_cond           ir ao estado 72
    identificador     ir ao estado 73


State 47

    6 bloco: rotulos parte_declara_vars $@3 parte_declara_procedure_function $@4 comando_composto .

    $padrão  reduzir usando a regra 6 (bloco)


State 48

   20 lista_id_var: lista_id_var VIRGULA IDENT .

    $padrão  reduzir usando a regra 20 (lista_id_var)


State 49

   52 tipo: IDENT .

    $padrão  reduzir usando a regra 52 (tipo)


State 50

   50 tipo: INTEGER .

    $padrão  reduzir usando a regra 50 (tipo)


State 51

   51 tipo: BOOLEAN .

    $padrão  reduzir usando a regra 51 (tipo)


State 52

   19 declara_var: lista_id_var DOIS_PONTOS tipo . $@8 PONTO_E_VIRGULA

    $padrão  reduzir usando a regra 18 ($@8)

    $@8  ir ao estado 74


State 53

   39 param_ProcedureFunction: ABRE_PARENTESES . lista_de_parametrosPF $@17 FECHA_PARENTESES

    FECHA_PARENTESES  reduzir usando a regra 45 (lista_de_parametrosPF)
    PONTO_E_VIRGULA   reduzir usando a regra 45 (lista_de_parametrosPF)
    $padrão          reduzir usando a regra 43 ($@19)

    lista_de_parametrosPF  ir ao estado 75
    $@19                   ir ao estado 76


State 54

   28 procedure_function: PROCEDURE IDENT $@9 param_ProcedureFunction . PONTO_E_VIRGULA bloco_PF $@10 PONTO_E_VIRGULA

    PONTO_E_VIRGULA  deslocar, e ir ao estado 77


State 55

   32 procedure_function: FUNCTION IDENT $@11 param_ProcedureFunction . DOIS_PONTOS tipo $@12 PONTO_E_VIRGULA bloco_PF $@13 PONTO_E_VIRGULA

    DOIS_PONTOS  deslocar, e ir ao estado 78


State 56

  131 identificador: IDENT .

    $padrão  reduzir usando a regra 131 (identificador)


State 57

   76 desvio: GOTO . NUMERO

    NUMERO  deslocar, e ir ao estado 79


State 58

   90 if_cond: IF . $@26 expressao $@27 THEN comando

    $padrão  reduzir usando a regra 88 ($@26)

    $@26  ir ao estado 80


State 59

   84 repeticao: WHILE . $@23 expressao $@24 DO comando

    $padrão  reduzir usando a regra 82 ($@23)

    $@23  ir ao estado 81


State 60

   67 com_sem_rotulo: WRITE . ABRE_PARENTESES lista_impr FECHA_PARENTESES

    ABRE_PARENTESES  deslocar, e ir ao estado 82


State 61

   66 com_sem_rotulo: READ . ABRE_PARENTESES lista_leit FECHA_PARENTESES

    ABRE_PARENTESES  deslocar, e ir ao estado 83


State 62

   59 comando: NUMERO . $@20 DOIS_PONTOS com_sem_rotulo

    $padrão  reduzir usando a regra 58 ($@20)

    $@20  ir ao estado 84


State 63

   60 comando: comando_composto .
   69 com_sem_rotulo: comando_composto .

    PONTO_E_VIRGULA  reduzir usando a regra 60 (comando)
    PONTO_E_VIRGULA  [reduzir usando a regra 69 (com_sem_rotulo)]
    T_END            reduzir usando a regra 60 (comando)
    T_END            [reduzir usando a regra 69 (com_sem_rotulo)]
    ELSE             reduzir usando a regra 60 (comando)
    ELSE             [reduzir usando a regra 69 (com_sem_rotulo)]
    $padrão         reduzir usando a regra 60 (comando)


State 64

   53 comando_composto: T_BEGIN comandos_todos . T_END

    T_END  deslocar, e ir ao estado 85


State 65

   54 comandos_todos: comandos .
   56 comandos: comandos . PONTO_E_VIRGULA comando

    PONTO_E_VIRGULA  deslocar, e ir ao estado 86

    $padrão  reduzir usando a regra 54 (comandos_todos)


State 66

   57 comandos: comando .

    $padrão  reduzir usando a regra 57 (comandos)


State 67

   61 comando: com_sem_rotulo .

    $padrão  reduzir usando a regra 61 (comando)


State 68

   68 com_sem_rotulo: desvio .

    $padrão  reduzir usando a regra 68 (com_sem_rotulo)


State 69

   63 com_sem_rotulo: atribui .

    $padrão  reduzir usando a regra 63 (com_sem_rotulo)


State 70

   64 com_sem_rotulo: repeticao .

    $padrão  reduzir usando a regra 64 (com_sem_rotulo)


State 71

   65 com_sem_rotulo: condicional .

    $padrão  reduzir usando a regra 65 (com_sem_rotulo)


State 72

   85 condicional: if_cond .
   87            | if_cond . ELSE $@25 comando

    ELSE  deslocar, e ir ao estado 87

    $padrão  reduzir usando a regra 85 (condicional)


State 73

   78 atribui: identificador . $@21 atribui_var

    $padrão  reduzir usando a regra 77 ($@21)

    $@21  ir ao estado 88


State 74

   19 declara_var: lista_id_var DOIS_PONTOS tipo $@8 . PONTO_E_VIRGULA

    PONTO_E_VIRGULA  deslocar, e ir ao estado 89


State 75

   39 param_ProcedureFunction: ABRE_PARENTESES lista_de_parametrosPF . $@17 FECHA_PARENTESES
   42 lista_de_parametrosPF: lista_de_parametrosPF . PONTO_E_VIRGULA $@18 parametrosPF

    PONTO_E_VIRGULA  deslocar, e ir ao estado 90

    $padrão  reduzir usando a regra 38 ($@17)

    $@17  ir ao estado 91


State 76

   44 lista_de_parametrosPF: $@19 . parametrosPF

    VAR    deslocar, e ir ao estado 92
    IDENT  deslocar, e ir ao estado 93

    parametrosPF        ir ao estado 94
    lista_parametrosPF  ir ao estado 95


State 77

   28 procedure_function: PROCEDURE IDENT $@9 param_ProcedureFunction PONTO_E_VIRGULA . bloco_PF $@10 PONTO_E_VIRGULA

    $padrão  reduzir usando a regra 34 ($@14)

    bloco_PF  ir ao estado 96
    $@14      ir ao estado 97


State 78

   32 procedure_function: FUNCTION IDENT $@11 param_ProcedureFunction DOIS_PONTOS . tipo $@12 PONTO_E_VIRGULA bloco_PF $@13 PONTO_E_VIRGULA

    IDENT    deslocar, e ir ao estado 49
    INTEGER  deslocar, e ir ao estado 50
    BOOLEAN  deslocar, e ir ao estado 51

    tipo  ir ao estado 98


State 79

   76 desvio: GOTO NUMERO .

    $padrão  reduzir usando a regra 76 (desvio)


State 80

   90 if_cond: IF $@26 . expressao $@27 THEN comando

    ABRE_PARENTESES  deslocar, e ir ao estado 99
    IDENT            deslocar, e ir ao estado 56
    NOT              deslocar, e ir ao estado 100
    TRUE             deslocar, e ir ao estado 101
    FALSE            deslocar, e ir ao estado 102
    NUMERO           deslocar, e ir ao estado 103

    expressao          ir ao estado 104
    expressao_simples  ir ao estado 105
    termo              ir ao estado 106
    fator              ir ao estado 107
    chamada_funcao     ir ao estado 108
    identificador      ir ao estado 109


State 81

   84 repeticao: WHILE $@23 . expressao $@24 DO comando

    ABRE_PARENTESES  deslocar, e ir ao estado 99
    IDENT            deslocar, e ir ao estado 56
    NOT              deslocar, e ir ao estado 100
    TRUE             deslocar, e ir ao estado 101
    FALSE            deslocar, e ir ao estado 102
    NUMERO           deslocar, e ir ao estado 103

    expressao          ir ao estado 110
    expressao_simples  ir ao estado 105
    termo              ir ao estado 106
    fator              ir ao estado 107
    chamada_funcao     ir ao estado 108
    identificador      ir ao estado 109


State 82

   67 com_sem_rotulo: WRITE ABRE_PARENTESES . lista_impr FECHA_PARENTESES

    IDENT   deslocar, e ir ao estado 56
    NUMERO  deslocar, e ir ao estado 111

    lista_impr     ir ao estado 112
    identificador  ir ao estado 113


State 83

   66 com_sem_rotulo: READ ABRE_PARENTESES . lista_leit FECHA_PARENTESES

    IDENT  deslocar, e ir ao estado 56

    lista_leit     ir ao estado 114
    identificador  ir ao estado 115


State 84

   59 comando: NUMERO $@20 . DOIS_PONTOS com_sem_rotulo

    DOIS_PONTOS  deslocar, e ir ao estado 116


State 85

   53 comando_composto: T_BEGIN comandos_todos T_END .

    $padrão  reduzir usando a regra 53 (comando_composto)


State 86

   56 comandos: comandos PONTO_E_VIRGULA . comando

    T_BEGIN  deslocar, e ir ao estado 46
    IDENT    deslocar, e ir ao estado 56
    GOTO     deslocar, e ir ao estado 57
    IF       deslocar, e ir ao estado 58
    WHILE    deslocar, e ir ao estado 59
    WRITE    deslocar, e ir ao estado 60
    READ     deslocar, e ir ao estado 61
    NUMERO   deslocar, e ir ao estado 62

    $padrão  reduzir usando a regra 62 (com_sem_rotulo)
